--- a/webroot/css/mce-dark.css
+++ b/webroot/css/mce-dark.css
@@ -1,1 +1,1 @@
-body{background-color:#333;color:#fff}
+body.mce-content-body{background-color:#333;color:#fff}
